--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -10,17 +10,7 @@
     box-shadow: 0px 4px #FA9005;
   }
   
-  .photo-gallery{
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  gap: 1rem;
-    }
-  #photo{
-    height: 250px;
-    width: 250px;
-  }
+ 
   #portrait{
     box-shadow: 10px 10px #FA9005;
     display: flex;
@@ -43,8 +33,15 @@
       border-bottom: black solid 1px;
       margin-top: 10%;
       margin-bottom: 5%;
-      margin-left: 20%;
-      margin-right: 20%;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+    #contactwords{
+      width: 30%;
+    }
+    form{
+      width: 30%;
+      height: 100%;
     }
     #portrait {
       box-shadow: 10px 10px #fa9005;
@@ -52,17 +49,5 @@
       height: 300px;
       width: 300px;
       margin-right: 5%;
-    }
-    .photo-gallery {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 2%;
-      margin: 0 auto;
-      width: 50%;
-    }
-    #photo {
-      height: 250px;
-      width: 250px;
     }
   }
