--- a/CSS/work-style.css
+++ b/CSS/work-style.css
@@ -1,7 +1,7 @@
 .grid-container {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 12.5%;
   display: grid;
   gap: 1rem;
 }
@@ -36,6 +36,7 @@
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   position: relative;
+  
 }
 
 .clients {
